Java Client, remove SocketInputStream, ...